Step 1: Change icon and name project

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,18 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
 
+# Step 1 : Install icon app
+  flutter_launcher_icons: "^0.14.4"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  # Remove_alpha.ios: true
+  image_path: "./android/assets/icon/LOGO.png"
+  min_skd_android : 28 #min is 16,default is 21
+  adative_icon_background: "#FFFFFF"
+  adative_icon_foreground: "./android/assets/icon/LOGO.png" # ให้iconเป็นรูปภาพ
+   #หลังจากนำภาพเข้าโปรเจค ให้ใช้คำสั่ง dart run flutter_launcher_icons
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
