--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,8 +46,15 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
 
-# Step 1 : Install icon app
+  # Step 1 : Install icon app
   flutter_launcher_icons: "^0.14.4"
+  # Step 2: Install loading app screen
+  flutter_spinkit: ^5.2.2
+  #ใช้คำสั่ง flutter pub get เพื่อติดตั้งแพ็กเกจ
+  connectivity_plus: ^6.1.5
+  #Step 3: show toast message
+  fluttertoast: ^8.2.12
+  #Step 4: ใช้คำสั่ง http package
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -69,14 +76,17 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
+  # To add " to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
+  # Step 2: Install loading app screen
+  assets:
+    - ./android/assets/images/ #show all
+    - ./android/assets/images/app_screen.png #show specific
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
 
